<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/navigation_qrcode">


    <fragment
        android:id="@+id/navigation_qrcode"
        android:name="com.sunbuy.qrcardid_java.fragment.QRScanFragment"
        android:label="@string/txt_scan_qr_code"
        tools:layout="@layout/fragment_qr_scan" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.sunbuy.qrcardid_java.fragment.HistoryFragment"
        android:label="@string/txt_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.sunbuy.qrcardid_java.fragment.ImportanceFragment"
        android:label="@string/txt_important"
        tools:layout="@layout/fragment_importance" />


</navigation>